Adding PNG support for logo insertion. This should be tested in deep on all platforms.

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,8 +7,8 @@ OBJECTS = utils.o vector.o crc.o mr.o field.o ip.o main.o
 CC = gcc
 STRIP = strip
 
-CFLAGS = -O2 -Wall -DMAKEIP_VERSION=\"$(VERSION)\"
-#LDFLAGS =
+CFLAGS = -O2 -Wall -DMAKEIP_VERSION=\"$(VERSION)\" -I/usr/local/include
+LDFLAGS = -L/usr/local/lib -lpng -lz
 
 INSTALLDIR = $(KOS_BASE)/../bin
 
@@ -22,7 +22,7 @@ OUTPUT = $(TARGET)$(EXECUTABLEEXTENSION)
 all: $(TARGET)
 
 $(TARGET): $(OBJECTS)
-	$(CC) $(CFLAGS) $(LDFLAGS) -o $(OUTPUT) $(OBJECTS)
+	$(CC) -o $(OUTPUT) $(CFLAGS) $(OBJECTS) $(LDFLAGS)
 	$(STRIP) $(OUTPUT)
 
 install:
